added a lot of things

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,8 @@
         "chrono": "cpp",
         "ratio": "cpp",
         "deque": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "functional": "cpp",
+        "*.rh": "cpp"
     }
 }
